--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,15 @@
     Please use a browser that supports "canvas"
     </canvas>
 
-    <script src="../lib/webgl-utils.js"></script>
-    <script src="../lib/webgl-debug.js"></script>
-    <script src="../lib/cuon-utils.js"></script>
-    <script src="../lib/cuon-matrix.js"></script>
+    <script src="lib/webgl-utils.js"></script>
+    <script src="lib/webgl-debug.js"></script>
+    <script src="lib/cuon-utils.js"></script>
+    <script src="lib/cuon-matrix.js"></script>
     <script src="final.js"></script>
+		<p>Use the arrows to move the camera, <br>
+		'r' unbuilds the bridge and 's' starts the construction.<br>
+		'i' and 'k' change the field of view. <br>
+		'd' changes the time of day (point vs directional lighting)<br>
+		'b' makes a boat appear, with a rave at night.</p>
   </body>
 </html>
