--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Point lighted cube (Per fragment)</title>
+    <title>utehutneh</title>
   </head>
 
   <body onload="main()">
